Aggiunti i commenti
